[gd_scene load_steps=12 format=3 uid="uid://d73jj45fpry8"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_3kwt6"]
[ext_resource type="Texture2D" uid="uid://da5oh4gt66lde" path="res://sprites/packages/light_package.png" id="1_sccnl"]
[ext_resource type="Theme" uid="uid://che6woj8cjmn0" path="res://hud_peaberry_theme.tres" id="2_0hkki"]
[ext_resource type="Texture2D" uid="uid://cp0vky8ir0vrx" path="res://sprites/packages/med_package.png" id="2_mysg4"]
[ext_resource type="Texture2D" uid="uid://dkkds1b7rbyqf" path="res://sprites/packages/heavy_package.png" id="3_857ws"]
[ext_resource type="Texture2D" uid="uid://1cu18678jpon" path="res://sprites/health_icon.png" id="5_s8oj1"]
[ext_resource type="Texture2D" uid="uid://cu5awqlqi71pj" path="res://sprites/mailbox.png" id="6_2s4t5"]
[ext_resource type="AudioStream" uid="uid://cciej2x03r30y" path="res://delivered.mp3" id="8_0f08i"]
[ext_resource type="AudioStream" uid="uid://hue5qamwplhv" path="res://door close.mp3" id="9_uxl4u"]

[sub_resource type="CanvasTexture" id="CanvasTexture_fbu66"]

[sub_resource type="CanvasTexture" id="CanvasTexture_wk1ut"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
follow_viewport_scale = 3.0
script = ExtResource("1_3kwt6")

[node name="Combo" type="Label" parent="."]
offset_left = 744.0
offset_top = 8.0
offset_right = 915.0
offset_bottom = 59.0
theme = ExtResource("2_0hkki")
theme_override_colors/font_color = Color(0, 0.615686, 0.32549, 1)
text = "Combo:"

[node name="ComboCount" type="Label" parent="Combo"]
layout_mode = 0
offset_left = 184.0
offset_right = 244.0
offset_bottom = 51.0
theme = ExtResource("2_0hkki")
theme_override_colors/font_color = Color(0, 0.615686, 0.32549, 1)
text = "x1
"

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.27451, 0.352941, 0.333333, 0.592157)
offset_right = 472.0
offset_bottom = 64.0
texture = SubResource("CanvasTexture_fbu66")

[node name="LightPackageCount" type="Label" parent="."]
offset_left = 64.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 87.0
theme = ExtResource("2_0hkki")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="LightPackageSprite" type="Sprite2D" parent="."]
position = Vector2(32, 32)
scale = Vector2(4, 4)
texture = ExtResource("1_sccnl")

[node name="MediumPackageCount" type="Label" parent="."]
offset_left = 224.0
offset_top = 8.0
offset_right = 264.0
offset_bottom = 88.0
theme = ExtResource("2_0hkki")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="MediumPackageSprite" type="Sprite2D" parent="."]
position = Vector2(192, 32)
scale = Vector2(4, 4)
texture = ExtResource("2_mysg4")

[node name="HeavyPackageCount" type="Label" parent="."]
offset_left = 376.0
offset_top = 8.0
offset_right = 416.0
offset_bottom = 87.0
theme = ExtResource("2_0hkki")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="MailboxLeftLabel" type="Label" parent="."]
offset_left = 944.0
offset_top = 464.0
offset_right = 1024.0
offset_bottom = 543.0
theme = ExtResource("2_0hkki")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeavyPackageSprite" type="Sprite2D" parent="."]
position = Vector2(344, 32)
scale = Vector2(4, 4)
texture = ExtResource("3_857ws")

[node name="Mailbox" type="Sprite2D" parent="."]
position = Vector2(984, 560)
scale = Vector2(4.5, 4.5)
texture = ExtResource("6_2s4t5")

[node name="Hearts" type="Node2D" parent="."]

[node name="Heart" type="Sprite2D" parent="Hearts"]
position = Vector2(24, 576)
scale = Vector2(3, 3)
texture = ExtResource("5_s8oj1")

[node name="Heart2" type="Sprite2D" parent="Hearts"]
position = Vector2(72, 576)
scale = Vector2(3, 3)
texture = ExtResource("5_s8oj1")

[node name="Heart3" type="Sprite2D" parent="Hearts"]
position = Vector2(120, 576)
scale = Vector2(3, 3)
texture = ExtResource("5_s8oj1")

[node name="EndScreen" type="Node2D" parent="."]
visible = false

[node name="Overlay" type="TextureRect" parent="EndScreen"]
modulate = Color(0.188235, 0.188235, 0.188235, 0.47451)
offset_right = 1023.0
offset_bottom = 601.0
texture = SubResource("CanvasTexture_wk1ut")

[node name="ReplayButton" type="Button" parent="EndScreen"]
offset_left = 376.0
offset_top = 272.0
offset_right = 632.0
offset_bottom = 336.0
text = "Restart (Shift + R)"

[node name="EndLabel" type="Label" parent="EndScreen"]
offset_left = 352.0
offset_top = 168.0
offset_right = 654.0
offset_bottom = 296.0
theme = ExtResource("2_0hkki")
text = "You failed!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreScreen" type="Node2D" parent="."]
visible = false

[node name="Overlay" type="TextureRect" parent="ScoreScreen"]
modulate = Color(0.188235, 0.188235, 0.188235, 0.47451)
offset_right = 1032.0
offset_bottom = 600.0
texture = SubResource("CanvasTexture_wk1ut")

[node name="ReplayButton" type="Button" parent="ScoreScreen"]
offset_left = 400.0
offset_top = 336.0
offset_right = 656.0
offset_bottom = 400.0
text = "Replay (Shift + R)"

[node name="NextButton" type="Button" parent="ScoreScreen"]
offset_left = 400.0
offset_top = 248.0
offset_right = 656.0
offset_bottom = 312.0
text = "Next Level (N)"

[node name="ScoreLabelNum" type="Label" parent="ScoreScreen"]
offset_left = 520.0
offset_top = 136.0
offset_right = 712.0
offset_bottom = 264.0
theme = ExtResource("2_0hkki")
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="ScoreScreen"]
offset_left = 352.0
offset_top = 136.0
offset_right = 544.0
offset_bottom = 264.0
theme = ExtResource("2_0hkki")
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseScreen" type="Node2D" parent="."]
visible = false

[node name="Overlay" type="TextureRect" parent="PauseScreen"]
modulate = Color(0.188235, 0.188235, 0.188235, 0.47451)
offset_right = 1024.0
offset_bottom = 600.0
texture = SubResource("CanvasTexture_wk1ut")

[node name="PauseLabel" type="Label" parent="PauseScreen"]
offset_left = 360.0
offset_top = 176.0
offset_right = 662.0
offset_bottom = 304.0
theme = ExtResource("2_0hkki")
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReplayButton" type="Button" parent="PauseScreen"]
offset_left = 384.0
offset_top = 304.0
offset_right = 640.0
offset_bottom = 368.0
text = "Restart (Shift + R)"

[node name="DeliveredAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_0f08i")

[node name="DoorCloseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_uxl4u")

[connection signal="pressed" from="EndScreen/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="ScoreScreen/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="ScoreScreen/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="PauseScreen/ReplayButton" to="." method="_on_replay_button_pressed"]
